--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@linaria/shaker": "^3.0.0-beta.15",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -16,15 +18,18 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
+    "react-refresh": "^0.11.0",
     "react-scripts": "5.0.0",
+    "svg-url-loader": "^7.1.1",
     "ts-loader": "^9.2.6",
+    "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "webpack serve --mode=development",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
