--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,7 @@
         "jsx": "react",
         "allowJs": true,
         "moduleResolution": "node",
-    }
+        
+    },
+    "include": ["./pnghelp.d.ts"],
 }
